Refactor tmux configuration and improve comments
Updated tmux configuration with improved comments and formatting. Adjusted history limit and key bindings for better usability.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # ============================================
-# CONFIGURATION TMUX - Thème Crème & Pastel
+# CONFIGURATION TMUX - Crème & Pastel
 # ============================================
 
 # ============================================
@@ -16,137 +16,105 @@ set-option -g prefix C-w
 bind-key C-w send-prefix
 
 # Options générales
-set -g base-index 1                    # commencer à 1 au lieu de 0
-setw -g pane-base-index 1              # idem pour les panneaux
-set -g detach-on-destroy off           # ne pas quitter tmux en fermant une session
-set -g escape-time 0                   # pas de délai pour Escape
-set -g history-limit 1000000           # historique énorme
-set -g renumber-windows on             # renuméroter les fenêtres automatiquement
-set -g set-clipboard on                # utiliser le clipboard système
-set -g status-position top             # barre de statut en haut (style macOS)
-setw -g mode-keys vi                   # mode vi pour la copie
+set -g base-index 1                    # Commencer à 1 au lieu de 0
+setw -g pane-base-index 1              # Idem pour les panneaux
+set -g detach-on-destroy off           # Ne pas quitter tmux en fermant une session
+set -g escape-time 0                   # Pas de délai pour Escape
+set -g history-limit 50000             # Historique (50k lignes)
+set -g renumber-windows on             # Renuméroter les fenêtres automatiquement
+set -g set-clipboard on                # Utiliser le clipboard système
+set -g status-position top             # Barre de statut en haut
 
 # ============================================
 # RACCOURCIS CLAVIER
 # ============================================
 
 # Diviser les panneaux
-unbind '"'
-unbind %
-bind ² split-window -h -c "#{pane_current_path}"    # ² pour diviser horizontalement
-bind & split-window -v -c "#{pane_current_path}"    # & pour diviser verticalement
+bind | split-window -h -c "#{pane_current_path}"    # | pour diviser horizontalement
+bind - split-window -v -c "#{pane_current_path}"    # - pour diviser verticalement
 
-# Navigation entre panneaux avec Ctrl+jklm (sans préfixe)
-bind -n C-j select-pane -L   # gauche
-bind -n C-k select-pane -D   # bas
-bind -n C-l select-pane -U   # haut
-bind -n C-m select-pane -R   # droite
+# Navigation entre panneaux avec Alt+jklm
+bind -n M-h select-pane -L              # gauche
+bind -n M-j select-pane -D              # bas
+bind -n M-k select-pane -U              # haut
+bind -n M-l select-pane -R              # droite
 
-# Redimensionner avec Ctrl+w puis flèches (repeatable)
-bind -r Left resize-pane -L 5
-bind -r Right resize-pane -R 5
-bind -r Up resize-pane -U 5
-bind -r Down resize-pane -D 5
+# Redimensionner avec Ctrl+Alt+flèches (repeatable)
+bind -r M-Left resize-pane -L 5
+bind -r M-Right resize-pane -R 5
+bind -r M-Up resize-pane -U 5
+bind -r M-Down resize-pane -D 5
 
 # Recharger la config
-bind r source-file ~/.tmux.conf \; display "✅ Config rechargée !"
+bind r source-file ~/.tmux.conf \; display "✓ Config rechargée !"
 
-# Tuer un panneau sans confirmation
+# Tuer un panneau
 bind x kill-pane
 
 # Créer une nouvelle fenêtre
 bind c new-window -c "#{pane_current_path}"
 
-# Mode copie amélioré
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-X copy-pipe-and-cancel "pbcopy"
+# Mode copie simple (compatible avec scroll terminal)
+setw -g mode-keys vi
+
+# Copie (pbcopy pour macOS)
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # ============================================
-# THÈME - Crème & Pastel (style Hyper)
+# THÈME - Crème & Pastel
 # ============================================
 
+# Couleurs
+BG="#2D2D2D"
+FG="#F5E6D3"
+ACCENT="#A5C9E4"
+ACCENT2="#E4B4D4"
+ACCENT3="#B4E4B4"
+ACCENT4="#F5E6A5"
+GREY="#6D6D6D"
+BORDER="#3D3D3D"
+
 # Bordures des panneaux
-set -g pane-border-style 'fg=#3D3D3D,bg=default'
-set -g pane-active-border-style 'fg=#A5C9E4,bg=default'
+set -g pane-border-style "fg=$BORDER,bg=default"
+set -g pane-active-border-style "fg=$ACCENT,bg=default"
 
-# Barre de statut (fond gris foncé, texte crème)
-set -g status-style bg='#2D2D2D',fg='#F5E6D3'
-
-# Longueur des sections
+# Barre de statut
+set -g status-style "bg=$BG,fg=$FG"
 set -g status-left-length 40
 set -g status-right-length 80
 
 # Section gauche (session)
-set -g status-left "#[fg=#A5C9E4,bold] 󰇘 #S #[fg=#E4B4D4]│ "
+set -g status-left "#[fg=$ACCENT,bold] ✦ #S #[fg=$ACCENT2]│ "
 
 # Section droite (répertoire et heure)
-set -g status-right "#[fg=#B4E4B4]#{b:pane_current_path} #[fg=#6D6D6D]│ #[fg=#F5E6A5,bold]%H:%M "
+set -g status-right "#[fg=$ACCENT3]#{b:pane_current_path} #[fg=$GREY]│ #[fg=$ACCENT4,bold]%H:%M "
 
 # Centrer les noms de fenêtres
 set -g status-justify centre
 
 # Fenêtres inactives
-setw -g window-status-style fg='#6D6D6D',bg='#2D2D2D'
+setw -g window-status-style "fg=$GREY,bg=$BG"
 setw -g window-status-format " #I:#W "
 
 # Fenêtre active
-setw -g window-status-current-style fg='#2D2D2D',bg='#A5C9E4',bold
+setw -g window-status-current-style "fg=$BG,bg=$ACCENT,bold"
 setw -g window-status-current-format " #I:#W "
 
 # Messages
-set -g message-style bg='#A5C9E4',fg='#2D2D2D',bold
+set -g message-style "bg=$ACCENT,fg=$BG,bold"
 
 # Mode copie
-setw -g mode-style bg='#A5C9E4',fg='#2D2D2D'
+setw -g mode-style "bg=$ACCENT,fg=$BG"
 
 # ============================================
-# PLUGINS
+# PLUGINS (Optionnel - Commenté par défaut)
 # ============================================
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'omerxx/tmux-sessionx'
-set -g @plugin 'omerxx/tmux-floax'
+# Décommente si tu veux utiliser TPM (Tmux Plugin Manager)
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 
-# ============================================
-# CONFIGURATION DES PLUGINS
-# ============================================
-
-# tmux-resurrect : sauvegarder/restaurer les sessions
-set -g @resurrect-strategy-nvim 'session'
-
-# tmux-continuum : sauvegarde automatique
-set -g @continuum-restore 'on'
-
-# tmux-sessionx : gestionnaire de sessions avec fzf
-set -g @sessionx-bind 'o'                                    # Ctrl+w puis o pour ouvrir
-set -g @sessionx-window-height '85%'
-set -g @sessionx-window-width '75%'
-set -g @sessionx-zoxide-mode 'on'
-set -g @sessionx-filter-current 'false'
-set -g @sessionx-auto-accept 'off'
-
-# tmux-floax : terminal flottant
-set -g @floax-bind 'p'                                       # Ctrl+w puis p pour ouvrir
-set -g @floax-width '80%'
-set -g @floax-height '80%'
-set -g @floax-border-color '#A5C9E4'
-set -g @floax-text-color '#F5E6D3'
-set -g @floax-change-path 'true'
-
-# tmux-fzf-url : ouvrir des URLs avec fzf
-set -g @fzf-url-fzf-options '-p 60%,30% --prompt="🔗 " --border-label=" Open URL "'
-set -g @fzf-url-history-limit '2000'
-
-# ============================================
-# INITIALISER TPM (TOUJOURS EN DERNIER)
-# ============================================
-
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
